--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "index": "node index.js"
   },
   "dependencies": {
+    "chai": "3.4.1",
+    "sinon": "1.17.2",
     "mocha": "2.2.5",
     "sinon-chai" : "2.8.0",
     "lodash": "3.9.3"
